--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div>
         <img
-          src="./src/imagee/logo_1.png"
+          src="logo_1.png"
           alt=""
           alt="Hotel Log"
           class="h-20"
@@ -117,12 +117,12 @@
     <!-- Images Block (Right) -->
     <div class="md:w-1/2 grid grid-cols-1 gap-6">
       <img
-        src="./src/imagee/about_1.png"
+        src="about_1.png"
         alt="About us 1"
         class="w-full h-64 object-cover rounded-xl shadow-md"
       />
       <img
-        src="./src/imagee/about_2.png"
+        src="about_2.png"
         alt="About us 2"
         class="w-full h-64 object-cover rounded-xl shadow-md"
       />
@@ -142,7 +142,7 @@
           <!-- Offer 1 -->
           <div class="bg-white rounded-xl shadow-md overflow-hidden">
             <img
-              src="./src/imagee/3_2.png"
+              src="3_2.png"
               alt="Luxury Suite"
               class="w-full h-64 object-cover hover:scale-105 transition duration-300"
             />
@@ -164,7 +164,7 @@
           <!-- Offer 2 -->
           <div class="bg-white rounded-xl shadow-md overflow-hidden">
             <img
-              src="./src/imagee/4.png"
+              src="4.png"
               alt="Romantic Getaway"
               class="w-full h-64 object-cover hover:scale-105 transition duration-300"
             />
@@ -186,7 +186,7 @@
           <!-- Offer 3 -->
           <div class="bg-white rounded-xl shadow-md overflow-hidden">
             <img
-              src="./src/imagee/3_1.png"
+              src="3_1.png"
               alt="Family Package"
               class="w-full h-64 object-cover hover:scale-105 transition duration-300"
             />
@@ -213,7 +213,7 @@
   <!-- Local Video Example -->
   <div class="rounded-xl overflow-hidden shadow-lg">
     <video controls class="w-full h-64 object-cover rounded-lg">
-      <source src="./src/imagee/video.png" type="video.png" />
+      <source src="video.png" type="video.png" />
       Your browser does not support the video tag.
     </video>
     <p class="mt-4 text-center text-gray-700">Resort Tour</p>
@@ -263,7 +263,7 @@
 
           <!-- Image 2 -->
           <img
-            src="./src/imagee/2_1.png"
+            src="2_1.png"
             alt="Delicious Dish 2"
             class="w-full h-72 object-cover rounded-xl shadow-md"
           />
@@ -285,7 +285,7 @@
       <!-- Room 1 -->
       <div class="relative rounded-xl overflow-hidden shadow-lg col-span-1">
         <img
-          src="./src/imagee/1.png"
+          src="1.png"
           alt="Deluxe Suite"
           class="w-full h-64 object-cover"
         />
@@ -298,7 +298,7 @@
       <!-- Room 2 - Taller -->
       <div class="relative rounded-xl overflow-hidden shadow-lg sm:row-span-2 col-span-1">
         <img
-          src="./src/imagee/2.png"
+          src="2.png"
           alt="Executive Room"
           class="w-full h-96 object-cover"
         />
@@ -311,7 +311,7 @@
       <!-- Room 3 -->
       <div class="relative rounded-xl overflow-hidden shadow-lg col-span-1">
         <img
-          src="./src/imagee/5.png"
+          src="5.png"
           alt="Standard Room"
           class="w-full h-52 object-cover"
         />
@@ -324,7 +324,7 @@
       <!-- Room 4 -->
       <div class="relative rounded-xl overflow-hidden shadow-lg col-span-1">
         <img
-          src="./src/imagee/2_2.png"
+          src="2_2.png"
           alt="Presidential Suite"
           class="w-full h-72 object-cover"
         />
@@ -389,32 +389,32 @@
 <section class="w-full bg-gray-100 py-16 px-6 md:px-20">
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
     <img
-      src="./src/imagee/banner2.png"
+      src="banner2.png"
       alt="Resort View 1"
       class="w-full h-64 object-cover rounded-xl shadow-md"
     />
     <img
-      src="./src/imagee/banner.png"
+      src="banner.png"
       alt="Resort View 2"
       class="w-full h-64 object-cover rounded-xl shadow-md"
     />
     <img
-      src="./src/imagee/3.png"
+      src="3.png"
       alt="Resort View 3"
       class="w-full h-64 object-cover rounded-xl shadow-md"
     />
     <img
-      src="./src/imagee/1_3.png"
+      src="1_3.png"
       alt="Resort View 4"
       class="w-full h-64 object-cover rounded-xl shadow-md"
     />
     <img
-      src="./src/imagee/2_3.png"
+      src="2_3.png"
       alt="Resort View 5"
       class="w-full h-64 object-cover rounded-xl shadow-md"
     />
     <img
-      src="./src/imagee/4_1.png"
+      src="4_1.png"
       alt="Resort View 6"
       class="w-full h-64 object-cover rounded-xl shadow-md"
     />
@@ -487,3 +487,4 @@
 </section>
 </body>
 </html>
+
