--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <!-- ✅ Fixed: Closed the section properly -->
       <section
         class="height[100vh] flex flex-col justify-center items-center w-full h-screen bg-center bg-cover bg-no-repeat text-black text-center px-4"
-        style="background-image: url('./src/imagee/1_2.png')"
+        style="background-image: url('imagee/1_2.png')"
       >
         <div class="text-center">
           <h1 class="text-5xl font-bold mb-4 drop-shadow-lg">
@@ -487,5 +487,6 @@
 </section>
 </body>
 </html>
+
 
 
