--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div>
         <img
-          src="imagee/logo_1.png"
+          src="logo_1.png"
           alt=""
           alt="Hotel Log"
           class="h-20"
@@ -487,6 +487,7 @@
 </section>
 </body>
 </html>
+
 
 
 
